# email_microservice

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
src/: check.rs  email.rs  main.rs  prelude.rs
